@@ -20,7 +20,6 @@ import com.dbn.common.extension.ExtensionPointCache;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class AssistantToolFactories extends ExtensionPointCache<AssistantToolType, AssistantToolFactory> {
     private static final AssistantToolFactories INSTANCE = new AssistantToolFactories();
@@ -37,6 +36,6 @@ public class AssistantToolFactories extends ExtensionPointCache<AssistantToolTyp
                 .all()
                 .stream()
                 .sorted(Comparator.comparingInt(c -> c.getToolCategory().ordinal()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
